sumo/tests/duarouter/alternatives/style2_input/errors/xml/missing_element_begin/errors.duarouter
Error: Expected end of tag 'vehicle'
 In file 'input_alts.rou.xml.alt'
 At line/column 13/6.

Quitting (on error).
